--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,17 @@ footer {
   text-align: center;
   color: var(--color-of-main-text);
   letter-spacing: 0.06em;
-}
+  height: 600px;
+  max-width: 1600px;
+  /*outline: 2px solid black;*/
+  margin-left: auto;
+  margin-right: auto;
+  /*background-image: linear-gradient(
+      to right,
+      rgba(255, 0, 0, 0.2),
+      rgba(0, 255, 0, 0.2)
+    ),
+    url("../images/Header.jpg");*/
 
 .banner-title {
   font-weight: 900;
