--- a/css/styles.css
+++ b/css/styles.css
@@ -201,28 +201,30 @@ footer {
 /* banner */
 
 .banner {
+  padding-top: 200px;
   text-align: center;
   color: var(--color-of-main-text);
   letter-spacing: 0.06em;
   height: 600px;
   max-width: 1600px;
-  /*outline: 2px solid black;*/
   margin-left: auto;
   margin-right: auto;
-  /*background-image: linear-gradient(
-      to right,
-      rgba(255, 0, 0, 0.2),
-      rgba(0, 255, 0, 0.2)
+  background-color: var(--background-footer);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
     ),
-    url("../images/Header.jpg");*/
+    url(../images/Header.jpg);
+}
 
 .banner-title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-
+  color: var(--white-color);
   margin-top: 0px;
-  margin-bottom: 46px;
+  margin-bottom: 30px;
+  text-transform: uppercase;
 }
 
 /* buttom */
