--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --secondary-buttom-background: #f5f4fa;
   --background-footer: #2f303a;
   --footer-text: rgba(255, 255, 255, 0.6);
+  --items-color: #afb1b8;
 }
 
 /* color of main text #212121; */
@@ -117,7 +118,7 @@ nav {
 }
 
 .connection a {
-  color: var(--color-of-main-text);
+  color: var(--color-of-second-text);
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 0.02em;
@@ -143,12 +144,33 @@ nav {
   margin-right: 10px;
   min-height: 13px;
   min-width: 16px;
-  content: "";
+  /*content: "";
   background-image: url(../images/envelope.svg);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: contain;*/
 }
-.phone::before {
+.envelope {
+  fill: var(--color-of-second-text);
+  height: 12px;
+  width: 16px;
+  margin-right: 10px;
+}
+.envelope:hover,
+.envelope:focus {
+  fill: var(--akcent);
+}
+.smartphone {
+  fill: var(--color-of-second-text);
+  height: 15px;
+  width: 10px;
+  margin-right: 10px;
+}
+.smartphone:hover,
+.smartphone:focus {
+  fill: var(--akcent);
+}
+
+/*.phone::before {
   display: inline-flex;
 
   margin-right: 10px;
@@ -158,7 +180,7 @@ nav {
   background-image: url(../images/phone.svg);
   background-repeat: no-repeat;
   background-size: contain;
-}
+}*/
 /* main part */
 
 .section.advantages .section-title {
@@ -487,59 +509,14 @@ h1 {
   margin-top: 0px;
   color: var(--color-of-main-text);
 }
-.team-title .social {
-  display: inline-block;
-  height: 20px;
-  width: 20px;
+.social {
+  width: 44px;
+  height: 44px;
 }
 .instagram {
-  background-image: url(../images/instagram2.svg);
-}
-
-.instagram:hover,
-.instagram:focus {
-  background-color: var(--akcent);
-  width: 44px;
-  height: 44px;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50%;
-}
-.twitter {
-  background-image: url(../images/twitter1.svg);
-}
-.twitter:hover,
-.twitter:focus {
-  background-color: var(--akcent);
-  width: 44px;
-  height: 44px;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50%;
-}
-.facebook {
-  background-image: url(../images/facebook1.svg);
-}
-.facebook:hover,
-.facebook:focus {
-  background-color: var(--akcent);
-  width: 44px;
-  height: 44px;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50%;
-}
-.linked {
-  background-image: url(../images/linkedin1.svg);
-}
-.linked:hover,
-.linked:focus {
-  background-color: var(--akcent);
-  width: 44px;
-  height: 44px;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50%;
+  fill: var(--items-color);
+  width: 20px;
+  height: 20px;
 }
 .logotips {
   display: flex;
