--- a/css/styles.css
+++ b/css/styles.css
@@ -427,6 +427,12 @@ h1 {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+}
+.projects .items:hover,
+.projects .items:focus {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 .projects .items:nth-child(3n) {
   margin-right: 0px;
@@ -437,6 +443,7 @@ h1 {
 
 .projects img {
   margin-bottom: 20px;
+  width: 368px;
 }
 .first-paragraf {
   font-weight: normal;
@@ -499,6 +506,11 @@ h1 {
   background-color: var(--white-color);
   border-radius: 4px;
   padding-bottom: 24px;
+}
+.team-title .item:hover,
+.team-title .item:focus {
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 
 .team-title .item + .item {
