--- a/css/styles.css
+++ b/css/styles.css
@@ -383,6 +383,7 @@ button {
   line-height: 1.62;
   border: none;
   padding: 6px 22px;
+  cursor: pointer;
 }
 .buttons li + li {
   margin-left: 8px;
